tune for thermal data

--- a/index.htm
+++ b/index.htm
@@ -3,11 +3,11 @@
  <head>
   <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
   <link rel="stylesheet" href="dygraph.css">
-  <title>light sensor viewer</title>
+  <title>thermal data viewer</title>
   <script type="text/javascript" src="dygraph.js"></script>
  </head>
  <body>
-  <h1>light sensor at home</h1>
+  <h1>thermal data of home server</h1>
   <div id="graph" style="width:100%"></div>
   <script type="text/javascript">
     container = document.getElementById("graph");
